z-index and link fixs, particle js tweaks

--- a/src/styles/components/_dotNavs.scss
+++ b/src/styles/components/_dotNavs.scss
@@ -1,7 +1,7 @@
 .dot-navs {
   position: fixed;
   transform: translateY(-50%);
-  z-index: 1;
+  z-index: 2;
   right: 30px;
   top: 50%;
 
