--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -5,7 +5,7 @@
   left: 50%;
   width: 100%;
   transform: translateX(-50%);
-  z-index: 2;
+  z-index: 3;
 
   &__container {
     display: flex;
